fixed Locale contructor deprecated